--- a/PlantillaGRIDlayout.css
+++ b/PlantillaGRIDlayout.css
@@ -57,7 +57,7 @@
   }
  
  
-  
+  /*
   .galeria {
     /*
       display: grid;
@@ -94,7 +94,7 @@
     
     padding: 1rem;
   }
-
+*/
 
   img {
     width: 100%;
@@ -111,6 +111,62 @@
     text-decoration: none;
   }
 
+.grid-gallery{
+
+  display: grid;
+  grid-auto-rows: 200px;
+  gap: 1rem;
+  grid-template-columns: repeat(5,1fr);
+  
+}
+
+@media all and (min-width: 320px){
+  .grid-gallery{
+    grid-template: repeat(1, 1fr);
+  }
+}
+
+@media all and (min-width: 768px){
+  .grid-gallery{
+    grid-template: repeat(3, 1fr);
+  }
+}
+
+@media all and (min-width: 1024px){
+  .grid-gallery{
+    grid-template: repeat(6, 1fr);
+  }
+}
+
+.grid-item:nth-child(11n+1){
+  grid-column: span 1;
+}
+
+.grid-item:nth-child(11n+4){
+  grid-column: span 2;
+  grid-row: span 1;
+}
+
+.grid-item:nth-child(11n+6){
+  grid-column: span 3;
+  grid-row: span 1;
+}
+
+.grid-item:nth-child(11n+7){
+  grid-column: span 1;
+  grid-row: span 2;
+}
+
+.grid-item:nth-child(11n+8){
+  grid-column: span 2;
+  grid-row: span 2;
+}
+
+.grid-item:nth-child(11n+9){
+  grid-row: span 3;
+}
+
+/*
   .galeria {
     display: grid;
     grid-auto-rows: 50%;
@@ -125,3 +181,4 @@
       grid-template-columns: repeat(6, 1fr);
     }
   }
+*/
