--- a/PlantillaGRIDlayout.css
+++ b/PlantillaGRIDlayout.css
@@ -100,7 +100,7 @@ aside a{
   border: black 5px solid;
 }
 
-
+/*
 .grid-gallery{
 
   display: grid;
@@ -162,3 +162,4 @@ aside a{
   height: 100%;
   object-fit: cover;
 }
+*/
